[package]
name = "cve_wraith"   
version = "0.1.0"
edition = "2024"
description = "A tool for CVE research and exploitation workflows"
license = "MIT"      
repository = "https://github.com/MrEchoFi/CVE_Wraith"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
